# tools

./: .gitignore  Cargo.toml  README.md  USAGE_EXAMPLE.md  build-and-install.ps1  build-and-install.sh  package.json
src/: main.rs
tools/example-tool/: Cargo.toml  README.md
tools/example-tool/src/: main.rs
tools/git-auto-commit/: Cargo.toml  README.md  config.toml.example
tools/git-auto-commit/src/: main.rs
