[package]
name = "git-auto-commit"
version = "0.1.0"
edition = "2021"
authors = ["Vantist"]
description = "Git auto-commit tool with intelligent suggestions in Traditional Chinese"
license = "ISC"

[[bin]]
name = "git-auto-commit"
path = "src/main.rs"

[dependencies]
colored = "2.0"
dialoguer = "0.11"
git2 = "0.18"
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
